--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,6 +21,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* for ShadCN */
+    "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
